Add bolognesa and chop suey

--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -8,5 +8,33 @@
 </head>
 <body>
     <h1>Pulled Pork Recipe</h1>
+    <img src="../images/pulledpork.jpg" alt="Pulled Pork">
+    <h2>Description</h2>
+    <p>The classic pulled pork is an excellent choice for your BBQ cravings. It is a delicious and generous meat that provides a great sweet and salty combination. Try out this awesome recipe!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 onion, finely chopped</li>
+        <li>3/4 c. ketchup</li>
+        <li>3 tbsp. tomato paste</li>
+        <li>1/4 c. apple cider vinegar</li>
+        <li>1 tsp. paprika</li>
+        <li>1 tsp. garlic powder</li>
+        <li>1 tsp. mustard powder</li>
+        <li>1 tsp. cumin</li>
+        <li>1 (3- to 4-lb.) pork shoulder, trimmed of excess fat</li>
+        <li>Freshly ground black pepper</li>
+        <li>Coleslaw, for serving</li>
+        <li>Buns, for serving</li>
+        <li>Kosher salt</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine onion, ketchup, tomato paste, apple cider vinegar and spices in the bowl of a slow cooker.</li>
+        <li>Season pork shoulder all over with salt and pepper then add to slow cooker, covering it with ketchup mixture.</li>
+        <li>Cover and cook until very tender (the meat should fall apart easily with a fork!), on HIGH for 5 to 6 hours or on LOW for 8 to 10 hours.</li>
+        <li>Remove pork from slow cooker and transfer to bowl.</li>
+        <li>Shred with two forks and toss with juices from the slow cooker.</li>
+        <li>Serve on buns with coleslaw.</li>
+    </ol>
 </body>
 </html>
