--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <H1>Odin Recipes</H1>
-    <a href="/recipes/pulled-pork.html">Pulled Pork</a>
+    <ul>
+        <li><a href="./recipes/pulled-pork.html">Pulled Pork</a></li>
+        <li><a href="./recipes/chop-suey.html">Chop Suey</a></li>
+        <li><a href="./recipes/bolognesa.html">Spaghetti alla Bolognesa</a></li>
+    </ul>
 </body>
 </html>
