--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
     <H1>Odin Recipes</H1>
+    <img src="./images/portada.jpg" alt="Couple Cooking">
     <ul>
         <li><a href="./recipes/pulled-pork.html">Pulled Pork</a></li>
         <li><a href="./recipes/chop-suey.html">Chop Suey</a></li>
